--- a/lib/makefile
+++ b/lib/makefile
@@ -1,7 +1,9 @@
 
 APP		= serial.exe
+OBJECTS = serial.o
 FLAGS   = -std=c++20
 LIBS	= -lwinmm
+LIBNAME = serialapi
 
 
 .PHONY: all all-before all-after clean-custom
@@ -16,11 +18,30 @@ purge: clean-custom
 #	rm -rf *.o *.exe *.a *.dll
 
 
-$(APP): main.o serial.o serial.hpp
+# ----
+#	dev app
+# ----
+$(APP): main.o $(OBJECTS) serial.hpp
 	g++ main.o serial.o $(LIBS) $(FLAGS) -o $(APP)
 
 main.o: main.cpp
 	g++ -c main.cpp $(FLAGS)
+
+# ----
+#	lib
+# ----
+#	make static lib
+libstatic: $(OBJECTS)
+	ar rvs lib$(LIBNAME).a $(OBJECTS)
+
+#	make dll
+libshared: $(OBJECTS)
+	g++ $(OBJECTS) $(LIBS) $(FLAGS) -s -shared -o $(LIBNAME).dll -Wl,--out-implib,lib$(LIBNAME).dll.a
+
+
+# ----
+#	objects
+# ----
 
 serial.o: serial.cpp serial.hpp
 	g++ -c serial.cpp $(FLAGS)
