--- a/gui/makefile
+++ b/gui/makefile
@@ -1,6 +1,6 @@
 
 APP        = SerialTerminal.exe
-OBJECTS    = app.res appops.o serialcomms.o ui.o ../lib/serial.o
+OBJECTS    = app.res appops.o terminal.o ../lib/serial.o
 FLAGS      = -std=c++20 -mwindows -g
 LIBS       = -lgdi32 -lcomdlg32 -lwinmm
 # -L"../lib" -lserialapi
@@ -23,14 +23,11 @@ run: run-custom
 $(APP): main.o $(OBJECTS)
 	g++ main.o $(OBJECTS) $(LIBS) $(FLAGS) -o $(APP)
 
-ui.o: ui.cpp
-	g++ -c ui.cpp -o ui.o $(FLAGS)
+terminal.o: terminal.cpp
+	g++ -c terminal.cpp -o terminal.o $(FLAGS)
 
 appops.o: appops.cpp
 	g++ -c appops.cpp -o appops.o $(FLAGS)
-
-serialcomms.o: serialcomms.cpp
-	g++ -c serialcomms.cpp -o serialcomms.o $(FLAGS)
 
 ../lib/serial.o: ../lib/serial.cpp
 	g++ -c ../lib/serial.cpp -o ../lib/serial.o $(FLAGS)
