--- a/gui/app.rc
+++ b/gui/app.rc
@@ -20,6 +20,8 @@ MAINMENU MENU {
 			MENUITEM "&Full (0x07 0xFA)", SUBMENU_HEXSTYLE_FULL
 		}
 
+		MENUITEM "&Special characters support", MENUITEM_SPECCHARS
+
 		MENUITEM SEPARATOR
 
 		MENUITEM "&Clear Terminal", MENUITEM_CLEAR
