--- a/gui/app.rc
+++ b/gui/app.rc
@@ -3,26 +3,41 @@
 
 #include "rescodes.hpp"
 
-APPICON ICON "../design/icon_gui.ico"
+APPICON				ICON	"../design/icon_gui.ico"
+ICON_BUTTON_SEND	BITMAP	"res/button-send.bmp"
 
-MAINMENU MENU{
+MAINMENU MENU {
 	
 	POPUP "&File"{
- 	
-		MENUITEM "&Save log", CM_FILE_SVLOG
+		MENUITEM "&Save log", MENUITEM_FILE_SVLOG
 		MENUITEM SEPARATOR
-		MENUITEM "&Exit", CM_FILE_EXIT
+		MENUITEM "&Exit", MENUITEM_FILE_EXIT
+	}
+
+	POPUP "&Terminal"{
+		POPUP "&Hex style" {
+			MENUITEM "&Short (07 FA)", SUBMENU_HEXSTYLE_SHORT
+			MENUITEM "&Full (0x07 0xFA)", SUBMENU_HEXSTYLE_FULL
+		}
+
+		MENUITEM "&Special characters support", MENUITEM_SPECCHARS
+		MENUITEM "&Show time stamps", MENUITEM_TIMESTAMP
+		MENUITEM "&Echo commands", MENUITEM_ECHOCMD
+
+		MENUITEM SEPARATOR
+
+		MENUITEM "&Clear Terminal", MENUITEM_CLEAR
 	}
 
 	POPUP "&Help"{
-		
-		MENUITEM "&About", CM_ABOUT
+		MENUITEM "&Quick readme", MENUITEM_HELP
+		MENUITEM "&About", MENUITEM_ABOUT
 	}
 }
 
 1 VERSIONINFO
-FILEVERSION 2,0,1
-PRODUCTVERSION 2,0,1
+FILEVERSION 4,0,0
+PRODUCTVERSION 4,0,0
 FILETYPE VFT_APP
 {
   BLOCK "StringFileInfo"
@@ -30,14 +45,14 @@ FILETYPE VFT_APP
     BLOCK "040904E4"
     {
       VALUE "CompanyName", "maddsua"
-      VALUE "FileVersion", "2.0.1"
+      VALUE "FileVersion", "4.0.0"
       VALUE "FileDescription", "Serial Terminal (COM monitor)"
       VALUE "InternalName", "SerialTerminalGraphical"
-      VALUE "LegalCopyright", "https://gitlab.com/maddsua"
-      VALUE "LegalTrademarks", "2022 maddsua/dev"
+      VALUE "LegalCopyright", "https://github.com/maddsua"
+      VALUE "LegalTrademarks", "2023 maddsua/dev"
       VALUE "OriginalFilename", "serterg"
       VALUE "ProductName", "Serial Terminal"
-      VALUE "ProductVersion", "2.0.1"
+      VALUE "ProductVersion", "4.0.0"
     }
   }
   BLOCK "VarFileInfo"
